--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -10,12 +10,13 @@ body {
     flex-direction: column;
 }
 #chat-body {
-    flex-grow: 1;
+    height: 80%;
     padding: 10px;
+    overflow: scroll;
 }
 #chat-input {
     border-top: 1px solid #74DBEF;
-    height: 100px;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
